tests/errors/sem.unknown-module.directive-load.or
main :: () -> void {
    @load "asdasdasdasdads.or";
};
